src/tests/testfiles/function-declarations/9.txt
testfiles/function-declarations/9.c:5:1: error: Function declaration parameters don't match previous definition
int sum(int a);
^
